--- a/Index.html.html
+++ b/Index.html.html
@@ -3,7 +3,7 @@
              <title> 민혜의 공부방 </title>
 </head>
 <body>
-            <h1> 민혜의 공부방에 오신 것을 환영합니다 </h1>
+  <h1> 민혜의 공부방에 오신 것을 환영합니다 </h1>
+  minhye2628.github.io/myhome/index.html
 </body>
 </html>
-minhye2628.github.io/myhome
