--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,9 @@
 </head>
 <body>
   <h1> 민혜의 공부방에 오신 것을 환영합니다 </h1>
-  <h2> 짝지야 사랑해 <h2>
+  <h2> 짝지야 사랑해 </h2>
   <h3> 사실은 거짓말.. </h3>
+  
+  <h1 style="color:blue"> 엄마, 아빠 사랑해요 </h1>
 </body>
 </html>
