--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,6 @@
             <h2> 짝지야 사랑해 </h2>
             <h3> 사실은 거짓말.. </h3>
 
-            <h1 style="color:blue"> 엄마, 아빠 사랑해요 </h1>
+            <h1 style="color:blue"> 엄마, 아빠 사랑해요. </h1>
 </body>
 </html>
